--- a/4_Visualizations_ ....ipynb
+++ b/4_Visualizations_ ....ipynb
@@ -2011,7 +2011,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **10 DepartmTopent–Salary Range Combinations by Average Annual Rate**\n",
+        "# **Department-wise Salary Range Combinations (Top 10) by Average Annual Rate**\n",
         "\n",
         "The dataset was categorized into salary ranges (Low, Medium, High, Very High, Extreme) based on Annual_Rate. The average salary was then calculated for each combination of department and salary range. The top 10 combinations with the highest average annual rates were selected to highlight departments and salary bands that offer the highest pay."
       ],
