--- a/3_EDA ..ipynb
+++ b/3_EDA ..ipynb
@@ -2299,7 +2299,7 @@
       "source": [
         "# **Observation**\n",
         "\n",
-        "- In the department‑year salary pivot table, **NaN indicates that no salary data was available for that department in that year.**\n",
+        "- Overall, the dataset shows a positive salary growth trend across departments, but data inconsistencies (NaN values and naming differences) highlight the importance of proper data cleaning.**\n",
         "\n",
         "- This could be due to restructuring, renaming, or missing records.\n",
         "\n",
