Revise observations and interpretations in EDA notebook

--- a/3_EDA ..ipynb
+++ b/3_EDA ..ipynb
@@ -2299,7 +2299,7 @@
       "source": [
         "# **Observation**\n",
         "\n",
-        "- Overall, the dataset shows a positive salary growth trend across departments, but data inconsistencies (NaN values and naming differences) highlight the importance of proper data cleaning.**\n",
+        "- In the department‑year salary pivot table, NaN indicates that no salary data was available for that department in that year **\n",
         "\n",
         "- This could be due to restructuring, renaming, or missing records.\n",
         "\n",
@@ -2313,7 +2313,7 @@
         "\n",
         "- # **Overall Interpretation**\n",
         "\n",
-        "- The department‑year variation table helps in understanding how average salary levels change over time within different departments.\n",
+        "- Overall, the dataset shows a positive salary growth trend across departments, but data inconsistencies (NaN values and naming differences) highlight the importance of proper data cleaning.\n",
         "\n",
         "- # **By comparing values across years, it becomes easier to identify:**\n",
         "\n",
