--- a/3_EDA ..ipynb
+++ b/3_EDA ..ipynb
@@ -2313,7 +2313,7 @@
         "\n",
         "- # **Overall Interpretation**\n",
         "\n",
-        "- Overall, the dataset shows a positive salary growth trend across departments, but data inconsistencies (NaN values and naming differences) highlight the importance of proper data cleaning.\n",
+        "- Overall, the dataset shows a positive salary growth trend across departments, but data inconsistencies (NaN values and naming differences).After resolving these issues, the analysis would provide clearer insights into long-term departmental compensation trends.\n",
         "\n",
         "- # **By comparing values across years, it becomes easier to identify:**\n",
         "\n",
