--- a/4_Visualizations_ ....ipynb
+++ b/4_Visualizations_ ....ipynb
@@ -1996,7 +1996,7 @@
         "# **Observations**\n",
         "\n",
         "- Departments Covered: **Public Health & Wellness, Economic Development, Louisville Metro Police Department, Louisville Metro Police, Louisville Zoo, Develop Louisville, Mayor Office**.\n",
-        "- Salary Range Categories: **Low (red), Medium (green), High (blue), Very High (purple), Extreme (orange).**\n",
+        "- Salary Range Categories: **Low (blue), Medium (orange), High (green), Very High (red), Extreme (purple).**\n",
         "- Distribution Pattern:\n",
         "- Some departments (**e.g., Police, Mayor’s Office) show a wider spread **across higher salary ranges.\n",
         "- Others (**e.g., Public Health & Wellness, Louisville Zoo) lean more toward low-to-medium salary ranges.**\n",
